--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>CADDIE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/ico" href="assets/covex_logo_small.png">
+  <link rel="icon" type="image/ico" href="assets/caddie_logo.png">
   <script src="https://kit.fontawesome.com/3ad4fe992f.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
