--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="all" />
+  <meta name="google-site-verification" content="hGCTZ3j-fm9nrcT6fikmBS0hCy_bq-jsXr4KTf8MlpY" />
   <link rel="icon" type="image/ico" href="assets/caddie_logo.png">
   <script src="https://kit.fontawesome.com/3ad4fe992f.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
